--- a/.github/workflows/give_kudos.yml
+++ b/.github/workflows/give_kudos.yml
@@ -20,6 +20,8 @@ jobs:
           cache: 'pip'
       - run: pip install -r requirements.txt
       - run: playwright install
+      - run: playwright install-deps
       - run: python give_kudos.py
         
+
 
